2004-08-02  Dan Winship  <danw@novell.com>

	* libsoup/soup-uri.h: Add flag "broken_encoding" to SoupUri.

	* libsoup/soup-uri.c: (soup_uri_to_string): if broken_encoding is
	set, don't re-encode the URL parts. Based on a patch by
	Alfred.Peng@Sun.COM.

2004-07-19  JP Rosevear  <jpr@novell.com>

	* configure.in: bump version, libtool number

2004-07-15  Dan Winship  <danw@novell.com>

	* libsoup/soup-session-sync.c (send_message): Simplify this. If
	the message comes back from soup_connection_send_request not
	FINISHED, get a new connection rather than reusing the old one.
	This fixes a race condition in which a connection could end up
	double-booked, and fixes the handling of messages that get
	redirected to another server.

2004-07-13  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (connect_result): If the connection
	attempt succeeded, reserve the connection before releasing
	host_lock. Otherwise, another thread might find it in the
	connection pool before the caller can queue a message on it.
	#60693

	* libsoup/soup-session-async.c (got_connection): Call
	soup_connection_release(), since we don't have a specific message
	in mind for the connection, so we need it to be considered idle.

	* libsoup/soup-connection.c (soup_connection_release): New
	function, to undo a soup_connection_reserve().
	(soup_connection_send_request, soup_connection_reserve,
	soup_connection_authenticate, soup_connection_reauthenticate):
	Document these

2004-07-12  Dan Winship  <danw@novell.com>

	* libsoup/soup-session-sync.c (send_message): signal the
	"connections available" condition after the message finishes. Duh.

	* libsoup-2.2.pc.in (Cflags, Libs): add XML_CFLAGS and XML_LIBS

2004-07-08  Dan Winship  <danw@novell.com>

	* libsoup/soup-soap-response.c: Revert previous change for now; it
	breaks the build on distros with older libxmls.

2004-07-08  Dan Winship  <danw@novell.com>

	* tests/dict.c: Basic SOAP test, using Aonaware's SOAP->DICT
	gateway
